Switch to and force maven 3. Add generation of technical reports using the -Psite-reports profile
git-svn-id: https://svn.apache.org/repos/asf/james/mailet/standard/trunk@1088888 13f79535-47bb-0310-9956-ffa450edef68